tests/bad/11_missing_return.src
# Test: Missing return statement
void main([string] args) {
    int x = 42;
    # Missing return statement
}
